<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ejercicio3Fragment" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtname1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_name_1"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtlast1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_last_1"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtplace1"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtplace1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_place_1"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtsal1"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtsal1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_sal_1"
                        android:inputType="numberDecimal"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtplace1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtname2"
                        tools:ignore="MissingConstraints" />

                    <!-- -->

                    <EditText
                        android:id="@+id/txtname2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_name_2"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtlast2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_last_2"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtplace2"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtplace2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_place_2"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtsal2"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtsal2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_sal_2"
                        android:inputType="numberDecimal"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtplace2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtname3"
                        tools:ignore="MissingConstraints" />

                    <!-- -->
                    <EditText
                        android:id="@+id/txtname3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:background="@color/divider"
                        android:ems="10"
                        android:hint="@string/hint_name_3"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="#37474F"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtlast3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_last_3"
                        android:background="@color/divider"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtplace3"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtplace3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_place_3"
                        android:background="@color/divider"
                        android:inputType="text"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtlast3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtsal3"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/txtsal3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_sal_3"
                        android:background="@color/divider"
                        android:inputType="numberDecimal"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtplace3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_ejer3"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/btn_ejer3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/accent"
                        android:backgroundTint="@color/accent"
                        android:text="@string/btn_calcular_ejer3"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtsal3"
                        android:drawableLeft="@drawable/cash_multiple"
                        android:drawableRight="@drawable/cash_multiple"
                        android:paddingHorizontal="30dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/lblresult_ejer3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_ejer3"
                        tools:ignore="MissingConstraints" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>